@@ -7,6 +7,8 @@
     * HiddenField
     * TextArea
     * SelectList
+    * CheckBox
+    * RadioButton
 === 2016-07-11
 * Enhancements
   * Added the following instance methods to Druid via ElementLocators
